# stats

./: .gitignore  LICENSE  Makefile  README.md  README.org  external.html  index.html  stack.yaml  stats.cabal
Docker/: docker-compose.yml
Docker/postgres/: Dockerfile
Docker/postgres/data/: 00.sh  01.sql  02.sql  03.sql  04.sql  05.sql  06.sql  07.sql
app/: Agent.hs  Main.hs  Radar.hs  Receiver.hs  Site.hs
css/: default.css
src/: Config.hs  Main.hs  Queries.hs  Renderer.hs  Report.hs  Richlist.hs  Sampler.hs  Secrets.hs  Trawl.hs
src/Database/: Accounts.hs
src/Parsers/: Account.hs  Common.hs  Validator.hs
src/Radar/: Scan.hs  Slack.hs
templates/: default.html  internal.html
