name:                stats
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/unification-com/stats#readme
license:             MIT
license-file:        LICENSE
author:              Indika Piyasena
maintainer:          indika@unification.com
copyright:           2020 Unification Foundation
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:
      Radar.Scan
    , Radar.Slack
    , Report
    , Sampler
    , Secrets
    , Trawl
  other-modules:
      Config
    , Parsers.Account
    , Parsers.Common
    , Parsers.Validator
    , Queries
  build-depends:       
      base
    , blaze-html
    , bytestring
    , diagrams
    , diagrams-lib
    , diagrams-contrib
    , diagrams-svg
    , diagrams-core
    , diagrams-html5
    , directory
    , filepath
    , postgresql-simple
    , process
    , text
    , time
    , SVGFonts
    -- Radar requirements
    , aeson
    , http-conduit
    , http-types
    , http-client-tls
    , http-client
    , network
    , raw-strings-qq
    -- TODO: Is unliftio used?
    , unliftio

  default-language:    Haskell2010

executable radar
  hs-source-dirs:      app
  main-is:             Radar.hs
  default-language:    Haskell2010
  build-depends:
      base
    , stats

executable stats-agent
  hs-source-dirs:      app
  main-is:             Agent.hs
  default-language:    Haskell2010
  build-depends:
      base
    , stats

executable stats-collector
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base
    , stats

executable stats-site
  hs-source-dirs:      app
  main-is:             Site.hs
  build-depends:
      base
    , hakyll
    , stats
  ghc-options:      -threaded
  default-language: Haskell2010

executable stats-receiver
  hs-source-dirs:      app
  main-is:             Receiver.hs
  default-language:    Haskell2010
  build-depends:
      base
    , stats
    , aeson
    , mtl
    , servant-server
    , wai
    , warp